--- a/main.css
+++ b/main.css
@@ -36,13 +36,18 @@
     margin-right: 20px;
     display: none;
 }
+.hi {
+    float: right;
+   margin-top: -40px;
+   font-size: 25px;
+   margin-right: 40px;
+}
 
-
-.nav ul{
+.nav  ul{
     
 display: none;
 }
-.nav ul li a{
+.nav ul li  a{
     color: rgb(0, 4, 7);
     font-size: 20px;
     padding: 10px 20px;
@@ -772,9 +777,7 @@ display: none;
                    
                 }
         }
-    
-    
-    
+        
     
     
     
