--- a/main.css
+++ b/main.css
@@ -476,7 +476,7 @@ display: none;
                 margin-top: 30px;
                 color: black;
                 width: 100%;
-                
+                margin-left: 100px;
             }
             .cold{
                 float: left;
